fix(*): Add routing models
